--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Prompt Stock",
-  "version": "1.0.0",
-  "description": "Store and manage your prompts efficiently",
+  "version": "1.3.0",
+  "description": "Store and manage your prompts efficiently, with stock K-line chart query and history",
   "permissions": [
     "storage",
     "activeTab"
