--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stock-prompt-extension",
-  "version": "1.0.0",
-  "description": "A modern prompt storage browser extension",
+  "version": "1.3.0",
+  "description": "A modern prompt storage browser extension with stock query and history",
   "type": "module",
   "scripts": {
     "dev": "vite build --watch --mode development",
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "lucide-react": "^0.344.0"
+    "lucide-react": "^0.344.0",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
